[gd_scene load_steps=18 format=3 uid="uid://cpk5lnlvvc5re"]

[ext_resource type="Texture2D" uid="uid://ca1x2yjpwxla4" path="res://assets/sprites/buttons/controls/butao1.png" id="1_d0dqu"]
[ext_resource type="Texture2D" uid="uid://bx2vdi30cnufq" path="res://assets/sprites/buttons/controls/btn_lado01.png" id="1_fq70n"]
[ext_resource type="Script" path="res://scripts/telas/hud.gd" id="1_ju17g"]
[ext_resource type="Texture2D" uid="uid://cypj84nlspbm8" path="res://assets/sprites/buttons/controls/butao2.png" id="2_qhr2y"]
[ext_resource type="Texture2D" uid="uid://cg4fjggatkkpv" path="res://assets/sprites/buttons/controls/btn_lado02.png" id="2_s8mpt"]
[ext_resource type="Texture2D" uid="uid://jrynx3sjw55b" path="res://assets/sprites/buttons/controls/botao-cima01.png" id="3_f8sbi"]
[ext_resource type="Texture2D" uid="uid://h50l78tspumt" path="res://assets/sprites/buttons/controls/btn_pulo01.png" id="3_wpnrv"]
[ext_resource type="Texture2D" uid="uid://dui0hk87utuhd" path="res://assets/sprites/buttons/controls/btn_pulo02.png" id="4_30qlj"]
[ext_resource type="Texture2D" uid="uid://djbxp4cjk8nu4" path="res://assets/sprites/buttons/controls/botao-cima02.png" id="4_wmmjd"]
[ext_resource type="Texture2D" uid="uid://dssuctjxt7cr3" path="res://assets/sprites/buttons/controls/botao-baixo01.png" id="7_wdppe"]
[ext_resource type="Texture2D" uid="uid://dkxmr5vietbri" path="res://assets/sprites/buttons/controls/botao-baixo02.png" id="8_sy7tw"]
[ext_resource type="Texture2D" uid="uid://oh1obqh5ir32" path="res://assets/sprites/buttons/controls/botao-diagonal01.png" id="9_e67d6"]
[ext_resource type="Texture2D" uid="uid://cmk0nx7k0pr2a" path="res://assets/sprites/buttons/controls/botao-diagonal02.png" id="10_klase"]
[ext_resource type="Texture2D" uid="uid://d4nlcv6a23mxq" path="res://assets/sprites/buttons/controls/botao-diagonal03.png" id="11_hyosk"]
[ext_resource type="Texture2D" uid="uid://bccrm4131bdbl" path="res://assets/sprites/buttons/controls/botao-diagonal04.png" id="12_wjtxo"]
[ext_resource type="FontFile" uid="uid://dtvxu2t8suq47" path="res://assets/fonts/Crang.ttf" id="16_x5qwl"]

[sub_resource type="LabelSettings" id="LabelSettings_ox4nl"]
font = ExtResource("16_x5qwl")
font_size = 19
font_color = Color(1, 1, 0.780392, 1)
outline_size = 6
outline_color = Color(0.22704, 0.24, 0.1104, 1)

[node name="layer_HUD" type="CanvasLayer"]
script = ExtResource("1_ju17g")

[node name="HUD" type="Control" parent="."]
modulate = Color(1, 1, 1, 0.392157)
layout_mode = 3
anchors_preset = 0
offset_left = 1.0
offset_right = 640.0
offset_bottom = 359.0

[node name="left_btn" type="TouchScreenButton" parent="HUD"]
position = Vector2(90, 279)
scale = Vector2(-1.5, 1.5)
texture_normal = ExtResource("1_fq70n")
texture_pressed = ExtResource("2_s8mpt")
passby_press = true
action = "move_left"

[node name="right_btn" type="TouchScreenButton" parent="HUD"]
position = Vector2(164, 280)
scale = Vector2(1.5, 1.5)
texture_normal = ExtResource("1_fq70n")
texture_pressed = ExtResource("2_s8mpt")
passby_press = true
action = "move_right"

[node name="up_btn" type="TouchScreenButton" parent="HUD"]
position = Vector2(100, 222)
scale = Vector2(1.5, 1.5)
texture_normal = ExtResource("3_f8sbi")
texture_pressed = ExtResource("4_wmmjd")
passby_press = true
action = "move_up"

[node name="jump_btn" type="TouchScreenButton" parent="HUD"]
position = Vector2(580, 201)
scale = Vector2(1.5, 1.5)
texture_normal = ExtResource("3_wpnrv")
texture_pressed = ExtResource("4_30qlj")
passby_press = true
action = "jump"

[node name="shot_btn" type="TouchScreenButton" parent="HUD"]
position = Vector2(522, 254)
scale = Vector2(1.71875, 1.71875)
texture_normal = ExtResource("1_d0dqu")
texture_pressed = ExtResource("2_qhr2y")
passby_press = true
action = "shot"

[node name="down_btn" type="TouchScreenButton" parent="HUD"]
position = Vector2(100, 280)
scale = Vector2(1.5, 1.5)
texture_normal = ExtResource("7_wdppe")
texture_pressed = ExtResource("8_sy7tw")
passby_press = true
action = "move_down"

[node name="rightDiagonal_btn" type="TouchScreenButton" parent="HUD"]
position = Vector2(163, 231)
scale = Vector2(1.2, 1.2)
texture_normal = ExtResource("9_e67d6")
texture_pressed = ExtResource("10_klase")
passby_press = true

[node name="leftDiagonal_btn" type="TouchScreenButton" parent="HUD"]
position = Vector2(51, 231)
scale = Vector2(1.2, 1.2)
texture_normal = ExtResource("11_hyosk")
texture_pressed = ExtResource("12_wjtxo")
passby_press = true

[node name="dash_btn" type="TouchScreenButton" parent="HUD"]
position = Vector2(536, 211)
texture_normal = ExtResource("1_fq70n")
texture_pressed = ExtResource("2_s8mpt")
passby_press = true
action = "dash"

[node name="Label" type="Label" parent="."]
modulate = Color(1, 1, 1, 0.552941)
offset_left = 540.0
offset_top = 82.0
offset_right = 620.0
offset_bottom = 105.0
text = "Vida:"
label_settings = SubResource("LabelSettings_ox4nl")
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="HUD/rightDiagonal_btn" to="." method="right_diagonal_pressed"]
[connection signal="released" from="HUD/rightDiagonal_btn" to="." method="right_diagonal_released"]
[connection signal="pressed" from="HUD/leftDiagonal_btn" to="." method="left_diagonal_pressed"]
[connection signal="released" from="HUD/leftDiagonal_btn" to="." method="left_diagonal_released"]
